--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,22 +1,25 @@
 <div class="container">
   <div>
-    <acme-navbar ></acme-navbar>
+    <acme-navbar></acme-navbar>
   </div>
   <div class="jumbotron">
     <h3>Please login</h3>
 
     <form name="loginForm" novalidate ng-submit="vm.authenticate()" autocomplete="on">
       <div class="form-horizontal">
-        <div class="form-group required" ng-class="{ 'has-error': loginForm.email.$touched && loginForm.email.$invalid }">
+        <div class="form-group required"
+             ng-class="{ 'has-error': loginForm.email.$touched && loginForm.email.$invalid }">
           <label for="email" class="control-label">Email</label>
-          <input id="email" ng-model="vm.email" name="email" class="form-control" type="text"
+          <input id="email" ng-model="vm.email" name="email" class="form-control" type="email"
                  placeholder="Email Address" required autofocus>
           <span class="help-block" ng-show="loginForm.email.$error.required && loginForm.email.$touched">Email is required.</span>
+          <span class="help-block" ng-show="loginForm.email.$error.email">Invalid email address.</span>
         </div>
         <div class="form-group required"
              ng-class="{ 'has-error': (loginForm.pass.$touched || loginForm.pass.$dirty) && loginForm.pass.$invalid}">
           <label for="pass" class="control-label">Password</label>
-          <input id="pass" ng-model="vm.pass" name="pass" class="form-control" type="password" placeholder="Password" required>
+          <input id="pass" ng-model="vm.pass" name="pass" class="form-control" type="password" placeholder="Password"
+                 required>
           <span class="help-block" ng-show="loginForm.pass.$error.required && loginForm.pass.$touched">Password is required.</span>
       <span class="complex-password">
         </span>
@@ -24,7 +27,8 @@
         </div>
       </div>
 
-      <input type="submit" class="btn btn-primary btn-lg btn-block" ng-disabled="loginForm.$invalid || !loginForm.$dirty" value="Submit">
+      <input type="submit" class="btn btn-primary btn-lg btn-block"
+             ng-disabled="loginForm.$invalid || !loginForm.$dirty" value="Submit">
     </form>
   </div>
 
