--- a/src/app/login/register.html
+++ b/src/app/login/register.html
@@ -1,67 +1,73 @@
 <div class="container">
   <div>
-    <acme-navbar ></acme-navbar>
+    <acme-navbar></acme-navbar>
   </div>
   <div class="jumbotron">
     <h3>Please register your user</h3>
 
     <form name="registerForm" novalidate ng-submit="vm.add()" autocomplete="on">
       <div class="form-horizontal">
-    <div class="form-group required" ng-class="{ 'has-error': registerForm.username.$touched && registerForm.username.$invalid }">
-    <label for="username" class="control-label">Username</label>
-      <input id="username" ng-model="vm.username" name="username" class="form-control" type="text"
-             placeholder="User name" required autofocus>
-      <span class="help-block" ng-show="registerForm.username.$error.required && registerForm.username.$touched">Username is required.</span>
+        <div class="form-group required"
+             ng-class="{ 'has-error': registerForm.username.$touched && registerForm.username.$invalid }">
+          <label for="username" class="control-label">Username</label>
+          <input id="username" ng-model="vm.username" name="username" class="form-control" type="text"
+                 placeholder="User name" required autofocus>
+          <span class="help-block" ng-show="registerForm.username.$error.required && registerForm.username.$touched">Username is required.</span>
 
-    </div>
-    <div class="form-group required" ng-class="{ 'has-error': registerForm.email.$touched && registerForm.email.$invalid }">
-    <label for="email" class="control-label">Email</label>
-      <input id="email" ng-model="vm.email" name="email" class="form-control" type="text" placeholder="Email Address"
-             required>
-      <span class="help-block" ng-show="registerForm.email.$error.required && registerForm.email.$touched">Email is required.</span>
-      </div>
+        </div>
+        <div class="form-group required"
+             ng-class="{ 'has-error': registerForm.email.$touched && registerForm.email.$invalid }">
+          <label for="email" class="control-label">Email</label>
+          <input id="email" ng-model="vm.email" name="email" class="form-control" type="email"
+                 placeholder="Email Address"
+                 required>
+          <span class="help-block" ng-show="registerForm.email.$error.required && registerForm.email.$touched">Email is required.</span>
+          <span class="help-block" ng-show="registerForm.email.$error.email">Invalid email address.</span>
+        </div>
         <div class="form-group required"
              ng-class="{ 'has-error': (registerForm.pass.$touched || registerForm.pass.$dirty) && registerForm.pass.$invalid , 'has-success': registerForm.pass.$dirty && registerForm.pass.$valid}">
-    <label for="pass" class="control-label">Password</label>
-      <input id="pass" ng-model="vm.pass" name="pass" class="form-control" type="password" ng-minlength="16"
-             placeholder="Password" lower-case upper-case required>
-      <span class="help-block" ng-show="registerForm.pass.$error.required && registerForm.pass.$touched">Password is required.</span>
-          <span class="help-block" ng-show="registerForm.pass.$error.minlength && registerForm.pass.$dirty">The password must be at least 16 characters long.</span>
-      <span class="help-block" ng-show="registerForm.pass.$error.upperCase && registerForm.pass.$dirty">Need's at least 1 uppercase character.</span>
+          <label for="pass" class="control-label">Password</label>
+          <input id="pass" ng-model="vm.pass" name="pass" class="form-control" type="password" ng-minlength="8"
+                 placeholder="Password" lower-case upper-case required>
+          <span class="help-block" ng-show="registerForm.pass.$error.required && registerForm.pass.$touched">Password is required.</span>
+          <span class="help-block" ng-show="registerForm.pass.$error.minlength && registerForm.pass.$dirty">The password must be at least 8 characters long.</span>
+          <span class="help-block" ng-show="registerForm.pass.$error.upperCase && registerForm.pass.$dirty">Need's at least 1 uppercase character.</span>
           <span class="help-block" ng-show="registerForm.pass.$error.lowerCase && registerForm.pass.$dirty">Need's at least 1 lowercase character.</span>
       <span class="complex-password">
-      Complex password required.Minimium 16 characters, at least one lowercase and one uppercase character.
+      Complex password required.Minimium 8 characters, at least one lowercase and one uppercase character.
         </span>
 
-    </div>
+        </div>
         <div class="form-group required"
              ng-class="{ 'has-error': registerForm.pass2.$dirty && registerForm.pass2.$invalid , 'has-success': registerForm.pass2.$dirty && registerForm.pass2.$valid}">
           <label for="pass2" class="control-label">Repeat Password</label>
-          <input id="pass2" ng-model="vm.pass2" name="pass2" class="form-control" type="password" ng-minlength="16"
+          <input id="pass2" ng-model="vm.pass2" name="pass2" class="form-control" type="password" ng-minlength="8"
                  placeholder="Repeat Password" match-inputs="vm.pass" required>
           <span class="help-block" ng-show="registerForm.pass2.$error.matchInputs && registerForm.pass2.$dirty">Passwords doesn't match.</span>
         </div>
       </div>
       <h4>Optional:</h4>
+
       <div class="row">
-      <div class="form-group col-md-4">
-        <label for="birthday">Birthday </label>
-        <input id="birthday" ng-model="vm.birthday" name="birthday" class="form-control" type="date"
-               placeholder="Birthday" ng-trim="false">
+        <div class="form-group col-md-4">
+          <label for="birthday">Birthday </label>
+          <input id="birthday" ng-model="vm.birthday" name="birthday" class="form-control" type="date"
+                 placeholder="Birthday" ng-trim="false">
+        </div>
+        <div class="form-group col-md-4">
+          <label for="employer">Employer </label>
+          <input id="employer" ng-model="vm.employer" name="employer" class="form-control" type="text"
+                 placeholder="Employer" ng-trim="false">
+        </div>
+        <div class="form-group col-md-4">
+          <label for="jobtitle">Job Title </label>
+          <input id="jobtitle" ng-model="vm.jobtitle" name="jobtitle" class="form-control" type="text"
+                 placeholder="Job Title" ng-trim="false">
+        </div>
       </div>
-      <div class="form-group col-md-4">
-        <label for="employer">Employer </label>
-        <input id="employer" ng-model="vm.employer" name="employer" class="form-control" type="text"
-               placeholder="Employer" ng-trim="false">
-      </div>
-      <div class="form-group col-md-4">
-        <label for="jobtitle">Job Title </label>
-        <input id="jobtitle" ng-model="vm.jobtitle" name="jobtitle" class="form-control" type="text"
-               placeholder="Job Title" ng-trim="false">
-      </div>
-       </div>
-      <input type="submit" class="btn btn-primary btn-lg btn-block" ng-disabled="registerForm.$invalid || !registerForm.$dirty" value="Submit">
-   </form>
+      <input type="submit" class="btn btn-primary btn-lg btn-block"
+             ng-disabled="registerForm.$invalid || !registerForm.$dirty" value="Submit">
+    </form>
   </div>
 
 </div>
